Revert "Merge emote category scrollbar fix from main into variant"
This reverts commit 13b46689883dac3e40895f687c20852f3dcf1230, reversing
changes made to c66296cd36e6ff8cbad378b6ffcf75c16322ab59.

--- a/src/base.css
+++ b/src/base.css
@@ -19,14 +19,14 @@ button {
 	--font-primary: 'Karla', sans-serif;
 	--font-display: var(--font-primary) !important;
 	/* Dark Matter Variables */
-	--avatar-size: 32px;
+	--avatar-size: 64px;
 	--background-image: url('https://i.imgur.com/7SbtKvw.png');
 	--home-image: url('https://i.imgur.com/233d55Y.gif');
 	--background-solid: #161921;
 	--background-solid-dark: #101218;
 	--background-solid-darker: #0c0e12;
-	--accent: 37, 172, 232;
-	--accent-alt: 29, 101, 134;
+	--accent: 115, 58, 173;
+	--accent-alt: 61, 30, 97;
 	--md-black: 0, 0, 0;
 	--dm-white: 255, 255, 255;
 	/* BlurpleRecolor */
@@ -103,7 +103,8 @@ div[class*="userProfile"][class*="unThemed"].theme-light {
 	background-clip: padding-box !important;
 }
 
-div#emoji-picker-tab-panel div[class*="categoryList"] div[class*="scrollerBase"]::-webkit-scrollbar {
+.none_c49869::-webkit-scrollbar,
+#emoji-picker-tab-panel div[class^="categoryList"] div[class^="scrollerBase"]::-webkit-scrollbar {
 	display: none !important;
 }
 
@@ -199,17 +200,8 @@ span[class^="expandedFolderBackground_"] {
 	height: var(--server-icon-size);
 }
 
-div[data-list-item-id="guildsnav___home"] {
-	background: var(--home-image) top center/110% no-repeat;
-}
-
 div[class^="unreadMentionsIndicatorBottom_"] {
 	bottom: 70px;
-}
-
-#app-mount [data-list-item-id="guildsnav___home"]>div {
-	color: transparent;
-	background-color: transparent;
 }
 
 div[data-list-item-id="guildsnav___create-join-button"],
@@ -279,11 +271,15 @@ div[class^="membersWrap_"] {
 	--background-modifier-hover: rgba(var(--dm-white), 0.07);
 	--background-modifier-active: var(--background-modifier-hover);
 	--background-modifier-selected: rgba(var(--dm-white), 0.07);
-	background: rgb(var(--md-black), 0.9);
+	background: rgb(var(--md-black), 0.6);
+}
+
+aside[class^="membersWrap_"] {
+	min-height: 100%;
 }
 
 div[data-list-id^="members_"][class*="scrollerBase_"] {
-	background: transparent;
+	min-height: 100%;
 }
 
 div[data-list-id^="members_"] [class*="placeholder"] {
@@ -358,9 +354,9 @@ nav+div[class^='base_']>div[class^="notice"] {
 
 div[class^='base_']>div,
 section[class*="themed_"] {
-	--background-secondary: rgba(var(--md-black), 0.7);
+	--background-secondary: rgba(var(--md-black), 0.5);
 	--background-tertiary: rgba(var(--dm-white), 0.05);
-	--background-primary: rgba(var(--md-black), 0.8);
+	--background-primary: rgba(var(--md-black), 0.6);
 }
 
 #app-mount>div:not([class^="appDevToolsWrapper_"]),
@@ -377,7 +373,7 @@ section[class*="themed_"] {
 section[class*="themed_"] {
 	height: 54px;
 	box-shadow: var(--elevation-low);
-	background-color: rgb(var(--md-black), 0.925) !important;
+	background-color: rgb(var(--md-black), 0.85) !important;
 	--background-secondary: rgba(var(--dm-white), 0.1);
 }
 
@@ -800,4 +796,9 @@ div[class*="footerSeparator"] {
 
 li[class^="card_"]>div[class^="container_"] {
 	background: var(--background-floating)
+}
+
+/* Settings */
+div[class^="accountProfileCard_"] div[class^="fieldList_"] {
+	background: var(--background-dark)
 }
